intTests/test_type_errors/err012.log.good
Loading file "err012.saw"
Type errors:
  err012.saw:12:2-12:17: Monadic bind with the wrong monad; found LLVMSetup but expected TopLevel
  err012.saw:12:2-12:17: This creates the action but does not execute it; if you meant to do that, prefix the expression with return
  err012.saw:12:14-12:17: Error: Type mismatch.
    Expected: Int
    Found:    LLVMSetup Int

  err012.saw:12:6-12:9: Note: The type Int arises from this type annotation
  err012.saw:12:2-12:17: Note: The type LLVMSetup Int arises from this type annotation


FAILED
