intTests/test_type_errors/err012.saw
// This was not allowed even prior to Dec 2024.
//
// This case checks what happens if you take a value in the wrong
// monad and bind it to a pattern that includes a type signature.

let f x = do {
   llvm_assert {{ True }};
   return x;
};

// note that you need the parens because of a possibly silly parser issue
(a : Int) <- f 3;
